src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@out1-fsF-wfsA2-spA1.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: A2\nset parent: A1\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-output \"headless-1\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-1\"\n}"
expression: outcome.snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 628 × 704, bounds: 800 × 600, states: []

post-map configures:
size: 1920 × 1080, bounds: 800 × 600, states: [Fullscreen]

unfullscreen configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
